<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="dept_S">
        <item>All</item>
        <item>1G</item>
        <item>2G</item>
        <item>3G</item>
    </string-array>

    <string-array name="isdj_S">
        <item>All</item>
        <item>已点检</item>
        <item>未点检</item>
    </string-array>

    <string-array name="Count_S">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Circle_S">
        <item>日</item>
        <item>周</item>
        <item>月</item>
    </string-array>

    <string name="app_name">MY</string>
    <string name="main_home">首页</string>
    <string name="main_dianjian">点检</string>
    <string name="main_add">追加</string>
    <string name="main_dianjian_set">设置</string>
    <string name="main_query">查询</string>
    <string name="action_settings">Settings</string>
    <string name="line_set">生产线设置</string>
    <string name="programme_set">工程设置</string>
    <string name="programme">工程</string>
    <string name="dianjian_wupin_set">番号设置</string>
    <string name="line">生产线</string>
    <string name="add">追加</string>
    <string name="wu_pin">番号</string>
    <string name="sao_ma">扫码</string>
    <string name="ma_zhi">码值</string>
    <string name="scan_code_text">二维码扫描</string>
    <string name="ngReason">请输入NG的原因</string>


    <string name="user_login">用户登录</string>
    <string name="user_num">工号：</string>
    <string name="input_user_num">请输入工号</string>
    <string name="user_pwd">密码：</string>
    <string name="input_user_pwd">请输入密码</string>
    <string name="string_login">登录</string>
    <string name="string__ip">未设置服务器IP地址</string>
    <string name="string__dept">部门： 线别： </string>
    <string name="string_no_check">未点检数：</string>
    <string name="string_count">周期数：</string>
    <string name="string_circle">周期类型：</string>
    <string name="string_main_nocheck">当前无需点检物品</string>
    <string name="string_button_check">点 检</string>
    <string name="string_scanner">将扫描框对准二维码，即可完成扫描</string>
    <string name="string_aftercapture_head">点检物品信息</string>
    <string name="string_aftercapture_line">生产线</string>
    <string name="string_aftercapture_dept">工__程</string>
    <string name="string_aftercapture_goods">物__品</string>
    <string name="string_aftercapture_dsgt">番__号</string>
    <string name="string_aftercapture_nodata">未获取到任何 点检项目信息</string>
    <string name="string_aftercapture_back">返 回</string>
    <string name="string_NgReason_OK">确认</string>
    <string name="string_Num_set">点检项目设置</string>
    <string name="string_Num_item">项目名：</string>
    <string name="string_Num_data">扭力值</string>
    <string name="string_Num_real">实际值：</string>
    <string name="string_Num_base">标准值：</string>
    <string name="string_Num_ngreason">NG原因：</string>
    <string name="string_Num_deal">处置方式：</string>
    <string name="button_OK">确认</string>
    <string name="button_cancel">取消</string>
    <string name="alarm_set">闹钟设置</string>
    <string name="alarm_add">添加闹钟</string>
    <string name="alarm_date">日期</string>
    <string name="alarm_time">时间</string>
    <string name="alarm_note">备注</string>
    <string name="time_clock">时间闹钟</string>
    <string name="add_timeclock">添加时间闹钟</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期天</string>
    <string name="string_note">备注</string>
    <string name="button_add">添加</string>
    <string name="button_cancle">取消</string>
    <string name="string_Signout">确 认 退 出 ？</string>
    <string name="item_check">外观</string>
    <string name="liem_base">标准值：10</string>
    <string name="item_ngreason">NG原因：10</string>
    <string name="item_real">实际值：10</string>
    <string name="item_oncheck">未点检</string>
    <string name="clock_day">日闹钟</string>
    <string name="clock_week">周闹钟</string>
    <string name="clock_month">月闹钟</string>
    <string name="code">识别码</string>

    <string name="main_code_dept">部门：</string>
    <string name="main_code_line">_线别：</string>
    <string name="main_code_nonCheck">未点检数：</string>
    <string name="main_code_count">请输入周期数</string>
    <string name="main_code_change">更改</string>
    <string name="main_code_cancel">取消</string>
    <string name="main_code_quit">退出</string>
    <string name="main_code_sure_quit">软件退出确认</string>
    <string name="main_code_day">日</string>
    <string name="main_code_week">周</string>
    <string name="main_code_month">月</string>
    <string name="main_code_toast">网络断开</string>

    <string name="login_code_ip">未设置服务器IP地址</string>
    <string name="login_code_num">对不起，工号不能为空</string>
    <string name="login_code_pwd">对不起，密码不能为空</string>
    <string name="login_code_setIP">设置服务器IP地址</string>
    <string name="login_code_wait">登录中</string>
    <string name="login_code_waiting">登录中，马上就好</string>


    <string name="CheckItemAdapter_code_itemName">项目名：</string>
    <string name="CheckItemAdapter_code_base">基准值：</string>
    <string name="CheckItemAdapter_code_real">实际值：</string>
    <string name="CheckItemAdapter_code_ngReason">NG原因：</string>

    <string name="AfterCapture_code_toast">获取点检物品信息失败</string>

    <string name="SetLineNum_code_toast">NG原因与实际值至少一项必填！</string>
    <string name="SetLineNum_code_toast2">成功更新点检项目信息</string>
    <string name="SetLineNum_code_toast3">更新点检项目信息失败</string>

    <string name="SetLineOkng_code_toast">NG原因与OK、NG确认至少一项必填！</string>
    <string name="SetLineOkng_code_toast2">NG原因与OK、NG确认两项必填！</string>
    <string name="SetLineOkng_code_toast3">成功更新点检项目信息</string>
    <string name="SetLineOkng_code_toast4">更新点检项目信息失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Send Local BroadCast</string>
    <string name="shock">震动</string>
    <string name="db">数据库</string>
    <string name="addDB">增加数据</string>
    <string name="update_download_failed">下载失败</string>
    <string name="update_download_failed_msg">下载失败原因</string>

    <string name="update_download_start">下载开始</string>
    <string name="update_download_processing">正在开始</string>
    <string name="update_download_finish">下载完成</string>
    <string name="update">检查更新</string>
    <string name="update_new_version">更新</string>
    <string name="update_title">标题</string>
    <string name="update_install">安装</string>
    <string name="cancel">取消</string>


</resources>