<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
   <Button
       android:id="@+id/bt_shock"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/shock"
       android:textSize="25sp"/>
    <Button
        android:id="@+id/bt_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/db"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/add_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addDB"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/btn_webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="webview"
        android:textSize="25sp"/>
    <ListView
        android:id="@+id/contacts_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
